--- a/app/src/assets/languages/es.json
+++ b/app/src/assets/languages/es.json
@@ -138,7 +138,8 @@
     "save"          : "Guardar",
     "confirm"       : "Confirmar",
     "cancel"        : "Cancelar",
-    "back"          : "Atrás"
+    "back"          : "Atrás",
+    "projectName"   : "Nombre proyecto"
   },
 
   "reports": {
