nis35 / nis32 (var_dumps)

--- a/app/src/assets/languages/es.json
+++ b/app/src/assets/languages/es.json
@@ -84,7 +84,13 @@
     "confirm"       : "Confirmar",
     "cancel"        : "Cancelar",
     "back"          : "Atrás",
-    "my-profile"    : "Mi Perfil"
+    "my-profile"    : "Mi Perfil",
+
+    "month"         : "Mes",
+    "salary"        : "Salario",
+
+    "score"         : "Puntaje",
+    "evaluation"    : "Evaluación"
   },
 
   "clients": {
