NIS31(fix)/NIS35/NIS36

--- a/app/src/assets/languages/es.json
+++ b/app/src/assets/languages/es.json
@@ -22,6 +22,11 @@
     "logout"      : "Salir"
   },
 
+  "evaluate": {
+    "title" : "Evaluación",
+    "user"  : "Usuario"
+  },
+
 
   "general": {
     "cancel"        : "Cancelar",
