[Feature/Tabla de totales por moneda/currency agregada directamente a los tracks]

--- a/app/src/assets/languages/es.json
+++ b/app/src/assets/languages/es.json
@@ -198,7 +198,10 @@
     "totalCost"         : "Costo Total",
     "presupuesto"       : "Presupuesto",
     "trackCost"         : "Costo",
-    "currency"          : "Moneda"
+    "currency"          : "Moneda",
+    "trello"            : "Trello",
+    "manual"            : "Manual",
+    "tipo"              : "Tipo"
   },
 
 
