feat: [wip] Fix problems to read failed requests in interceptor, add the get last closure request to the controller and add the table to show added payment requests

--- a/application/app/src/assets/languages/es.json
+++ b/application/app/src/assets/languages/es.json
@@ -539,6 +539,10 @@
 
   "payment_requests": {
     "title": "Solicitud de pago",
+    "error_messages": {
+      "null_values": "Los campos concepto y monto son obligatorios",
+      "amount_greater_than_zero": "El campo monto deve ser mayor que cero"
+    },
     "form_accordion": {
       "title": "Formulario",
       "concept_input": {
