--- a/application/app/src/assets/languages/es.json
+++ b/application/app/src/assets/languages/es.json
@@ -1,5 +1,6 @@
 {
   "navigation": {
+    "payment_requests": "Payment Requests",
     "dashboard"   : "Dashboard",
     "users"       : "Users",
     "clients"     : "Clients",
@@ -534,5 +535,103 @@
     "name"        : "Name",
     "projectKey"  : "KEY Project",
     "url"         : "URL"
+  },
+  "payment_requests": {
+    "title": "Payment Requests",
+    "error_messages": {
+      "status_update": "Payment request update error",
+      "null_values": "All form fields are mandatory",
+      "amount_greater_than_zero": "The amount field must be greater than zero",
+      "error_to_save": "There was an error while creating the request"
+    },
+    "success_messages": {
+      "status_updated": "Payment request updated successfully",
+      "payment_request_created": "Payment request created successfully",
+      "payment_request_cancelled": "Payment request cancelled successfully"
+    },
+    "cancel_request_dialog": {
+      "title": "Cancel Request",
+      "text": "Are you sure you want to cancel the payment request?"
+    },
+    "show_request_details_dialog": {
+      "title": "Request Details"
+    },
+    "form_accordion": {
+      "title": "Form",
+      "filters": {
+        "concept_input": {
+          "label": "Concept",
+          "placeholder": "Choose an Concept to filter"
+        },
+        "status_input": {
+          "label": "Status",
+          "placeholder": "Choose an Status to filter"
+        },
+        "user_input": {
+          "label": "User",
+          "placeholder": "Choose an User to filter"
+        }
+      },
+      "concept_input": {
+        "label": "Concept",
+        "placeholder": "Choose a concept"
+      },
+      "amount_input": {
+        "label": "Amount",
+        "placeholder": "Enter an amount"
+      },
+      "concept_description_input": {
+        "label": "Observation",
+        "placeholder": "Enter an observation if desired"
+      },
+      "add_concept_button_text": "Add concept",
+      "add_filters_button_text": "Add filters",
+      "save_request_button_text": "Save Request",
+      "request_table_title": "Request",
+      "request_table_subtitle": "The request will be effective once the finance team approves the payment",
+      "id_table_header": "ID",
+      "concept_table_header": "Concept",
+      "amount_table_header": "Amount",
+      "observation_table_header": "Observation",
+      "actions_table_header": "Actions",
+      "total_table_footer": "Total"
+    },
+    "history_accordion": {
+      "title": "History",
+      "id_table_header": "ID",
+      "date_table_header": "Date",
+      "total_table_header": "Amount",
+      "currency_table_header": "Currency",
+      "actions_table_header": "Actions",
+      "status_table_header": "Status",
+      "total_table_footer": "Total"
+    },
+    "all-table": {
+      "user_table_header": "User",
+      "date_table_header": "Date",
+      "currency_table_header": "Currency",
+      "pay_table_header": "Pay",
+      "total_table_header": "Total",
+      "info_table_header": "Info",
+      "reject_table_header": "Reject",
+      "concept_table_header": "Concept",
+      "amount_table_header": "Amount",
+      "observation_table_header": "Description"
+    },
+    "concepts": {
+      "closure": "Closure",
+      "benefits": "Benefits",
+      "compensation": "Compensation",
+      "request_concepts": "Request Concepts"
+    },
+    "status": {
+      "pending": "Pending",
+      "canceled": "Cancelled",
+      "approved": "Approved",
+      "rejected": "Rejected"
+    },
+    "table_accordion": {
+      "title": "List"
+    }
   }
 }
