feat: Added new words to controller.

--- a/application/app/src/assets/languages/es.json
+++ b/application/app/src/assets/languages/es.json
@@ -628,6 +628,34 @@
       "compensation": "Compensation",
       "request_concepts": "Request Concepts"
     },
+		"currency": {
+			"clp": "CLP",
+			"usd": "USD",
+			"eur": "EUR",
+			"brl": "BRL",
+			"jpy": "JPY",
+			"gbp": "GBP",
+			"cad": "CAD",
+			"aud": "AUD",
+			"cny": "CNY",
+			"inr": "INR",
+			"mxn": "MXN",
+			"rub": "RUB",
+			"zar": "ZAR",
+			"chf": "CHF",
+			"krw": "KRW",
+			"sek": "SEK",
+			"nzd": "NZD",
+			"sgd": "SGD",
+			"hkd": "HKD",
+			"ars": "ARS",
+			"pyg": "PYG",
+			"uyu": "UYU"
+		},
+		"currency-label": "Currency",
+		"start-date": "Start Date",
+		"end-date": "End Date",
+		"filter": "Filter",
     "status": {
       "pending": "Pending",
       "canceled": "Cancelled",
